2007-04-30  Michael Natterer  <mitch@gimp.org>

	* themes/Default/gtkrc: set GtkButton::focus-line-width to 1 and
	GtkButton::focus-padding to 0, just like in the Small theme (it
	was always meant to be that way, stupid copy'n'paste...)

2007-04-29  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "oc" (Occitan) to ALL_LINGUAS.

2007-04-28  Tor Lillqvist  <tml@novell.com>

	* gimp-zip.in: Add libgimpconfig to the developer package. Remove
	the separate gif plug-in cruft. Fix a few typos.

2007-04-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-pdb.c: add optional run_mode keyword argument
	to pdb calls.

2007-04-28  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpclipboard.c
	* app/widgets/gimpdnd-xds.c
	* plug-ins/helpbrowser/dialog.c: use gdk_atom_intern_static_string().

2007-04-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimppickable.[ch]: added get_pixel_at() method to the
	GimpPickable interface. This gives direct access to the pixel
	without converting it to an RGB color.

	* app/core/gimpdrawable.c
	* app/core/gimpimagemap.c
	* app/core/gimpprojection.c: implement the new method and also use
	it to reimplement get_color_at().

	* app/core/gimpimage-crop.c (gimp_image_crop_guess_bgcolor): use
	gimp_pickable_get_pixel_at(). Fixes auto-shrink on indexed and
	grayscale images.

2007-04-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/sunras.c (set_color_table): guard against a
	possible stack overflow.

2007-04-27  Sven Neumann  <sven@gimp.org>

	* configure.in: use PANGO_DISABLE_DEPRECATED for pango < 1.17.

	* plug-ins/common/sample_colorize.c: removed unused variable.

2007-04-27  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on poppler-glib >= 0.4.1.

	* plug-ins/common/poppler.c: removed ifdefs to handle older
	versions of the poppler library. Removed "antialias" toggle from
	the procedure API and from the GUI; it's not supported by poppler.

2007-04-27  Sven Neumann  <sven@gimp.org>
